# tauri-plugin-canvas

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  rollup.config.js  tsconfig.json
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: CanvasPlugin.swift  MarkerBrush.swift  MetalCanvasView.swift  PencilTexture.swift  StrokeGestureRecognizer.swift  StrokeInterpolation.swift  StrokeMesh.swift  StrokeRenderer.swift  StrokeStorage.swift
ios/Tests/PluginTests/: CanvasPluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: activate_pen.toml  deactivate_pen.toml  export_image.toml  export_latest_stroke_fragment.toml  get_strokes.toml  hide_canvas.toml  redo.toml  show_canvas.toml  undo.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
