[package]
name = "tauri-plugin-canvas"
version = "0.1.0"
authors = ["Tutor Project"]
description = "Transparent native canvas overlay plugin for Tauri"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
exclude = ["/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-canvas"
keywords = ["tauri", "plugin", "canvas", "ios", "pencil"]
categories = ["graphics", "api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.5" }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
